SAM/web/src/main/resources/static/css/overview.css
.boardName {
	text-align: center;
	font-size: 150%;
}

.overview {
	width: 46%;
	min-height: 400px;
	margin: 1.5%;
	background-color: #b3e4ff;
	padding-bottom: 25px;
}

.projectTextBlock {
	margin: 5px;
	width: 40%;
	height: 140px;
	float: left;
	padding: 0px;
	word-break: break-all;
	display: table;
}

.projectTaskList {
	height: 80px;
	width: 40%;
	float: left;
	position: relative;
	top: 30px;
}

.taskName {
	text-align: center;
}

.taskProgress {
	width: 95%;
}

.createProjectInput {
	width: 50%;
}

@media screen and (max-device-width:480px) {
	#project {
		margin: free;
		width: 95%;
	}
	#toDoList {
		margin: free;
		width: 95%;
	}
	.projectTaskBlock {
		margin: 1%;
		max-width: 75px;
		width: 45%;
		max-height: 75px;
		background-color: lightgrey;
		float: left;
		text-align: center;
	}
}

@media screen and (min-device-width:481px) {
	#project {
		float: left;
		margin-right: 5px;
	}
	#toDoList {
		float: right;
		margin-left: 5px;
	}
	.projectTaskBlock {
		margin: 1%;
		max-width: 75px;
		width: 30%;
		max-height: 75px;
		background-color: lightgrey;
		float: left;
		text-align: center;
	}
}

#createProject {
	width: 70%;
	height: auto;
	padding: 10px;
	margin: 25px auto auto auto;
	border: 1px solid lightgrey;
	background-color: white;
	text-align: center;
}

#createProjectFormWrapper {
	display: none;
}

#createProjectIcon {
	width: 30px;
	height: 30px;
}

#errorwrapper {
	color: red;
}

